Add table list and new table form on lobby page.

--- a/src/app/lobby/lobby.html
+++ b/src/app/lobby/lobby.html
@@ -1,1 +1,19 @@
-<p>lobby works!</p>
+<div class="container">
+  <main>
+    <div class="py-5 text-start">
+      <h2>Hello [username]!</h2>
+      <p class="lead">
+        Welcome to my little Doppelkopf Online Multiplayer Game. <br>
+        Have fun!
+      </p>
+    </div>
+    <div class="row">
+      <div class="col-6">
+        <app-tables></app-tables>
+      </div>
+      <div class="col-6">
+        <app-new-table></app-new-table>
+      </div>
+    </div>
+  </main>
+</div>
