Reformat code and optimize imports.

--- a/src/app/lobby/new-table/new-table.html
+++ b/src/app/lobby/new-table/new-table.html
@@ -8,19 +8,24 @@
         <label for="playerLimit" class="col-sm-3 col-form-label fs-4 p">Player Limit</label>
         <div class="col-sm-9">
           <div class="btn-group d-flex mt-2" role="group" aria-label="Basic radio toggle button group">
-            <input type="radio" class="btn-check" name="playerLimit" id="playerLimit1" autocomplete="off" required value="4">
+            <input type="radio" class="btn-check" name="playerLimit" id="playerLimit1" autocomplete="off" required
+                   value="4">
             <label class="btn btn-outline-primary" for="playerLimit1">4</label>
 
-            <input type="radio" class="btn-check" name="playerLimit" id="playerLimit2" autocomplete="off" required value="5">
+            <input type="radio" class="btn-check" name="playerLimit" id="playerLimit2" autocomplete="off" required
+                   value="5">
             <label class="btn btn-outline-primary" for="playerLimit2">5</label>
 
-            <input type="radio" class="btn-check" name="playerLimit" id="playerLimit3" autocomplete="off" required value="6">
+            <input type="radio" class="btn-check" name="playerLimit" id="playerLimit3" autocomplete="off" required
+                   value="6">
             <label class="btn btn-outline-primary" for="playerLimit3">6</label>
 
-            <input type="radio" class="btn-check" name="playerLimit" id="playerLimit4" autocomplete="off" required value="7">
+            <input type="radio" class="btn-check" name="playerLimit" id="playerLimit4" autocomplete="off" required
+                   value="7">
             <label class="btn btn-outline-primary" for="playerLimit4">7</label>
 
-            <input type="radio" class="btn-check" name="playerLimit" id="playerLimit5" autocomplete="off" required value="8">
+            <input type="radio" class="btn-check" name="playerLimit" id="playerLimit5" autocomplete="off" required
+                   value="8">
             <label class="btn btn-outline-primary" for="playerLimit5">8</label>
           </div>
         </div>
