--- a/src/app/game/action/bid/bid.html
+++ b/src/app/game/action/bid/bid.html
@@ -2,7 +2,8 @@
   <div class="card-body">
     <div class="row">
       <form method="post">
-        <div class="input-group" ngbTooltip="Make a bid for your hand. Only possible if you declared a reservation before.">
+        <div class="input-group"
+             ngbTooltip="Make a bid for your hand. Only possible if you declared a reservation before.">
           <select class="form-select" id="declareSelect" aria-label="Select the declaration for your hand" required>
             <option selected disabled>Select Bid</option>
             <option value="MARRIAGE" [disabled]="true">Marriage</option>
