--- a/src/app/game/action/call/call.html
+++ b/src/app/game/action/call/call.html
@@ -2,7 +2,8 @@
   <div class="card-body">
     <div class="row">
       <form method="post">
-        <div class="input-group" ngbTooltip="Calls can be made according to the rules. The number indicates how many cards you can play until the call is not allowed anymore. Call must be made before the number is 0.">
+        <div class="input-group"
+             ngbTooltip="Calls can be made according to the rules. The number indicates how many cards you can play until the call is not allowed anymore. Call must be made before the number is 0.">
           <!-- TODO BUTTON SHOULD OPEN A MODAL WITH INFORMATION ABOUT THE CALLS -->
           <button class="btn btn-outline-secondary" type="button"><i class="bi bi-info-circle-fill"></i></button>
           <span class="input-group-text">[0]</span>
