--- a/src/app/game/hand/hand.html
+++ b/src/app/game/hand/hand.html
@@ -4,18 +4,42 @@
       [INFO TEXT]
     </h5>
     <div class="row gy-3">
-      <div class="col-sm-6 col-md-3 col-lg-2 col-xl-2"><app-card></app-card></div>
-      <div class="col-sm-6 col-md-3 col-lg-2 col-xl-2"><app-card></app-card></div>
-      <div class="col-sm-6 col-md-3 col-lg-2 col-xl-2"><app-card></app-card></div>
-      <div class="col-sm-6 col-md-3 col-lg-2 col-xl-2"><app-card></app-card></div>
-      <div class="col-sm-6 col-md-3 col-lg-2 col-xl-2"><app-card></app-card></div>
-      <div class="col-sm-6 col-md-3 col-lg-2 col-xl-2"><app-card></app-card></div>
-      <div class="col-sm-6 col-md-3 col-lg-2 col-xl-2"><app-card></app-card></div>
-      <div class="col-sm-6 col-md-3 col-lg-2 col-xl-2"><app-card></app-card></div>
-      <div class="col-sm-6 col-md-3 col-lg-2 col-xl-2"><app-card></app-card></div>
-      <div class="col-sm-6 col-md-3 col-lg-2 col-xl-2"><app-card></app-card></div>
-      <div class="col-sm-6 col-md-3 col-lg-2 col-xl-2"><app-card></app-card></div>
-      <div class="col-sm-6 col-md-3 col-lg-2 col-xl-2"><app-card></app-card></div>
+      <div class="col-sm-6 col-md-3 col-lg-2 col-xl-2">
+        <app-card></app-card>
+      </div>
+      <div class="col-sm-6 col-md-3 col-lg-2 col-xl-2">
+        <app-card></app-card>
+      </div>
+      <div class="col-sm-6 col-md-3 col-lg-2 col-xl-2">
+        <app-card></app-card>
+      </div>
+      <div class="col-sm-6 col-md-3 col-lg-2 col-xl-2">
+        <app-card></app-card>
+      </div>
+      <div class="col-sm-6 col-md-3 col-lg-2 col-xl-2">
+        <app-card></app-card>
+      </div>
+      <div class="col-sm-6 col-md-3 col-lg-2 col-xl-2">
+        <app-card></app-card>
+      </div>
+      <div class="col-sm-6 col-md-3 col-lg-2 col-xl-2">
+        <app-card></app-card>
+      </div>
+      <div class="col-sm-6 col-md-3 col-lg-2 col-xl-2">
+        <app-card></app-card>
+      </div>
+      <div class="col-sm-6 col-md-3 col-lg-2 col-xl-2">
+        <app-card></app-card>
+      </div>
+      <div class="col-sm-6 col-md-3 col-lg-2 col-xl-2">
+        <app-card></app-card>
+      </div>
+      <div class="col-sm-6 col-md-3 col-lg-2 col-xl-2">
+        <app-card></app-card>
+      </div>
+      <div class="col-sm-6 col-md-3 col-lg-2 col-xl-2">
+        <app-card></app-card>
+      </div>
     </div>
   </div>
 </div>
